# codename-symbiont

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  docker-compose.yml
frontend/: .gitignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/src/app/: page.tsx
libs/shared_models/: Cargo.toml
libs/shared_models/src/: lib.rs
services/api_service/: Cargo.toml  Dockerfile
services/api_service/src/: main.rs
services/knowledge_graph_service/: Cargo.toml  Dockerfile
services/knowledge_graph_service/src/: main.rs
services/nats_tester/: Cargo.toml  Dockerfile
services/nats_tester/src/: main.rs
services/perception_service/: Cargo.toml  Dockerfile
services/perception_service/src/: main.rs
services/preprocessing_service/: Cargo.toml  Dockerfile
services/preprocessing_service/src/: embedding_generator.rs  main.rs
services/text_generator_service/: Cargo.toml  Dockerfile
services/text_generator_service/src/: main.rs
services/vector_memory_service/: Cargo.toml  Dockerfile
services/vector_memory_service/src/: main.rs
