[workspace]
members = [
    "libs/shared_models",
    "services/knowledge_graph_service",
    "services/perception_service",
    "services/preprocessing_service",
    "services/text_generator_service",
    "services/api_service",
    "services/vector_memory_service",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Daniyal Asylbekov <nekgo2009@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
