[package]
name = "knowledge_graph_service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
neo4rs = "0.7.3"
shared_models = { path = "../../libs/shared_models" }
log = "0.4"
env_logger = "0.11.8"
futures = "0.3"
