[package]
name = "perception_service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.33"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.18" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared_models = { path = "../../libs/shared_models" }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"