[package]
name = "preprocessing_service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rust_tokenizers = { version = "8.1.1" } 
shared_models = { path = "../../libs/shared_models" }
futures = "0.3"
tokenizers = { version = "0.21.1", features = ["unstable_wasm"], default-features = false }