[package]
name = "vector_memory_service"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
async-nats = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qdrant-client = "1.14.0"
log = "0.4"
env_logger = "0.11.8"
shared_models = { path = "../../libs/shared_models" }
anyhow = "1.0"
futures = "0.3"
